--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,5 +30,9 @@ jobs:
       - run: npm ci
       - uses: nrwl/nx-set-shas@v4
 
+      - run: nx build host
+
+      - run: nx test host --no-watch --no-results-output --code-coverage
+
       # - run: npx nx-cloud record -- nx format:check
       # - run: npx nx affected -t lint test build e2e-ci
