--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,7 +30,7 @@ jobs:
       - run: npm i
       - uses: nrwl/nx-set-shas@v4
 
-      - run: npm run affected:lint -- --all
+      # - run: npm run affected:lint -- --all
 
       - run: npm run build
 
