--- a/apps/host/dockerfile
+++ b/apps/host/dockerfile
@@ -5,11 +5,11 @@ COPY . .
 
 RUN npm install -g @nrwl/cli
 RUN npm install --force
-RUN npx nx build table --prod 
+RUN npx nx build host 
 #--configuration=production
 #RUN pwd && ls
 
 #stage 2
 FROM nginx:alpine
 COPY ./apps/first-microfront/nginx.conf /etc/nginx/nginx.conf
-COPY --from=node /dist/apps/table /usr/share/nginx/html
+COPY --from=node /dist/apps/host /usr/share/nginx/html
